--- a/firmware/printpoop/printpoop28_manifest.json
+++ b/firmware/printpoop/printpoop28_manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "PrintpooP",
     "version": "1.3.0",
-    "new_install_prompt_erase": false,
+    "new_install_prompt_erase": true,
     "new_install_improv_wait_time": 0,
     "builds": [
       {
