--- a/firmware/printpoop/printpoop28_1_manifest.json
+++ b/firmware/printpoop/printpoop28_1_manifest.json
@@ -10,7 +10,7 @@
           { "path": "bootloader.bin", "offset": 4096 },
           { "path": "partitions.bin", "offset": 32768},
           { "path": "boot_app0.bin", "offset": 57344 },
-          { "path": "printpoop28_app.ino.bin", "offset": 65536 }
+          { "path": "printpoop28_1_app.ino.bin", "offset": 65536 }
         ]
       }
     ]
