--- a/firmware/vaandcobobd2gauge/T5_manifest.json
+++ b/firmware/vaandcobobd2gauge/T5_manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Va&Cob OBDII Gauge",
+    "name": "ESP32 Bluetooth OBD2 Gauge",
     "version": "Ford T5",
     "new_install_prompt_erase": false,
     "new_install_improv_wait_time": 0,
