--- a/firmware/printpoop/printpoop28_2_kitten_manifest.json
+++ b/firmware/printpoop/printpoop28_2_kitten_manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "PrintpooP",
-    "version": "1.5.0",
+    "version": "1.6.0",
     "new_install_prompt_erase": true,
     "new_install_improv_wait_time": 0,
     "builds": [
@@ -10,7 +10,7 @@
           { "path": "bootloader.bin", "offset": 4096 },
           { "path": "partitions.bin", "offset": 32768},
           { "path": "boot_app0.bin", "offset": 57344 },
-          { "path": "printpoop28_2_app.ino.bin", "offset": 65536 }
+          { "path": "printpoop28_2_kitten.bin", "offset": 65536 }
         ]
       }
     ]
