--- a/firmware/tunebar/tunebar_manifest.json
+++ b/firmware/tunebar/tunebar_manifest.json
@@ -20,7 +20,7 @@
           "offset": 57344
         },
         {
-          "path": "tunebar.ino.bin",
+          "path": "tunebar.bin",
           "offset": 65536
         },
         {
