--- a/firmware/tunebar/tunebar_manifest.json
+++ b/firmware/tunebar/tunebar_manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "TuneBar",
-  "version": "v1.0.0",
+  "version": "1.1.0",
   "new_install_prompt_erase": true,
   "new_install_improv_wait_time": 0,
   "builds": [
